@@ -32,7 +32,8 @@
 #endif
 
 enum {
-  PREF_PAGE_PLAYER = 0,
+  PREF_PAGE_GENERAL = 0,
+  PREF_PAGE_PLAYER,
   PREF_PAGE_GAMES,
   PREF_PAGE_APPEARANCE,
   PREF_PAGE_QSTAT,
