@@ -1,5 +1,7 @@
 Sept 10, 2001: Alex Burger <alex@fragit_dot_net>
 - Added Jordi Mallach's man page - xqf.6 and modified Makefile.am
+- Added 'General' Preferences page and moved most of 'Appearance'
+  to 'General' page.
 
 Sept 5, 2001: Alex Burger <alex@fragit_dot_net>
 - Patch by  Ludwig Nussel ludwig.nussel@gmx.de to add German
